[workspace]
members = [
    "opentelemetry-aws",
    "opentelemetry-contrib",
# TODO: Add back in once this relies on a published version
#    "opentelemetry-datadog",
# TODO: Add back in once this relies on a published version
#    "opentelemetry-stackdriver",
    "opentelemetry-user-events-logs",
    "opentelemetry-user-events-metrics",
# TODO: Add back in once this relies on a published version
#    "opentelemetry-zpages",
    "examples/traceresponse",
]
resolver = "2"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
# See function names in profiling reports.
# 2/true is too much, 0 is not enough, 1 is just right for back traces
debug = 1

[workspace.dependencies]
opentelemetry = { git = "https://github.com/KallDrexx/opentelemetry-rust", rev = "6cf86cf192034373797353eea1ee9efee551778d" }
opentelemetry_sdk = { git = "https://github.com/KallDrexx/opentelemetry-rust", rev = "6cf86cf192034373797353eea1ee9efee551778d" }
opentelemetry-otlp = { git = "https://github.com/KallDrexx/opentelemetry-rust", rev = "6cf86cf192034373797353eea1ee9efee551778d" }
opentelemetry-semantic-conventions = { git = "https://github.com/KallDrexx/opentelemetry-rust", rev = "6cf86cf192034373797353eea1ee9efee551778d" }
